Closed
Bug 333222
Opened 20 years ago
Closed 19 years ago
Buttons not disabled when they should, if toolbar buttons are text-only
Categories
(Camino Graveyard :: Toolbars & Menus, defect)
Tracking
(Not tracked)
RESOLVED
FIXED
Camino1.5
People
(Reporter: hwaara, Assigned: stuart.morgan+bugzilla)
References
Details
(Keywords: fixed1.8.1.1, Whiteboard: [good first bug])
Attachments
(1 file, 1 obsolete file)
|
1020 bytes,
patch
|
mikepinkerton
:
superreview+
|
Details | Diff | Splinter Review |
Camino 1.0
Steps to reproduce:
1. Open a new window
2. Ctrl-click the toolbar, and choose "Text only" for the buttons.
You'll notice that Back/Forward are clickable and enabled in the toolbar, even if you have not used this window before. This does not happen in the toolbar button as images-mode.
See also bug 316835, which tracks improperly disabled buttons as buttons.
Blocks: 316835
Target Milestone: --- → Camino1.1
Blocks: 341853
No longer blocks: 316835
Comment 2•20 years ago
|
||
I'll look into this.
Assignee: mikepinkerton → bugzilla
Whiteboard: [good first bug]
| Assignee | ||
Comment 3•19 years ago
|
||
Why NSToolbarItem doesn't do this by default in the custom view case is beyond me.
Comment 4•19 years ago
|
||
Comment on attachment 242998 [details] [diff] [review]
fix
+// Make sure that them menu form, which is used for the text-only view,
r=me with the comment cleaned up
Attachment #242998 -
Flags: review? → review+
| Assignee | ||
Comment 5•19 years ago
|
||
With gooder English
Attachment #242998 -
Attachment is obsolete: true
Attachment #243000 -
Flags: superreview?(mikepinkerton)
| Reporter | ||
Comment 6•19 years ago
|
||
(In reply to comment #3)
> Created an attachment (id=242998) [edit]
> fix
>
> Why NSToolbarItem doesn't do this by default in the custom view case is beyond
> me.
File an apple bug?
| Assignee | ||
Comment 7•19 years ago
|
||
The docs mention that enabling of the menu item rep is separate for custom-view items, so they already know. I just don't know why they think it's desirable.
Comment 8•19 years ago
|
||
Comment on attachment 243000 [details] [diff] [review]
fixed fix
sr=pink
Attachment #243000 -
Flags: superreview?(mikepinkerton) → superreview+
Whiteboard: [good first bug] → [good first bug][needs checkin]
Comment 9•19 years ago
|
||
Checked in on 1.8branch and trunk.
Status: ASSIGNED → RESOLVED
Closed: 19 years ago
Keywords: fixed1.8.1
Resolution: --- → FIXED
Whiteboard: [good first bug][needs checkin] → [good first bug]
Updated•19 years ago
|
Keywords: fixed1.8.1.1
Updated•19 years ago
|
Keywords: fixed1.8.1
You need to log in
before you can comment on or make changes to this bug.
Description
•