Camino only - Text-only back/forward buttons aren't disabled correctly. Patch by smorgan <stuart.morgan@alumni.case.edu> r=kreeger sr=pink b=333222.